# splendaq

./: .gitignore  CITATION.bib  LICENSE  MANIFEST.in  README.md  add citation to README  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: github-deploy.yml  python-package.yml
splendaq/: __init__.py  _version.py
splendaq/daq/: __init__.py  _continuous.py  _trigger.py
splendaq/io/: _io.py
splendaq/io/_liconvert/: liconvert  liconvert_linux
src/splendaq/: __init__.py  _cli.py  _version.py
src/splendaq/control/: __init__.py  _hps.py  _sr560.py
src/splendaq/daq/: __init__.py  _continuous.py  _log_data.py  _offline_trigger.py  _oscilloscope.py  _sequencer.py  _trigger.py
src/splendaq/io/: _io.py
src/splendaq/io/_liconvert/: COPYING.txt  liconvert_linux  liconvert_macos
tutorials/: logging_data.ipynb
tutorials/daq/: dc_oscilloscope.ipynb  event_building.ipynb  logging_data.ipynb  running_the_sequencer.ipynb  sequencer_settings.yaml
tutorials/io/: read_files.ipynb  write_files.ipynb
