[metadata]
name = splendaq
description = Generalized offline data acquisition with a focus on the Moku
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/splendor-collab/splendaq
author = SPLENDOR Collaboration
maintainer = SPLENDOR collaboration
license = MIT
license_file = LICENSE
license_files = LICENSE

[options]
packages = find:
install_requires =
    numpy
    scipy
    matplotlib
    moku>=2.5
    h5py
python_requires = >=3.6
include_package_data = True
package_dir =
    = src
zip_safe = False

[options.packages.find]
where = src
